works for now, needs ajax

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -9,7 +9,7 @@
   height: 50px;
   width: 50px;
   border-radius: 2px;
-  background-color: red;
+  background-color: #3e92cc;
   margin: 20px 5px;
   display: flex;
   align-items: center;
@@ -23,5 +23,5 @@
 }
 
 .chosen-letter {
-  border: 3px solid green;
+  border: 3px solid #16324f;
 }
