--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,4 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
-
+<h1>do you want to play a game?</h1>
 <div class="letters">
   <% @letters.each do |letter|%>
     <div class="letter">
