--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 
   <body>
     <div class="container">
-      <%= yield %>
+      <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+          <%= yield %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
