--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,17 +1,23 @@
-<h1>do you want to play a game?</h1>
-<div class="letters">
-  <% @letters.each do |letter|%>
-    <div class="letter">
-      <p><%= letter.upcase %></p>
-    </div>
-  <% end %>
+<div class="box">
+  <div class="header">
+    <h1>do you want to play a game?</h1>
+    <br>
+    <h2>find the longest word you can in the letters below:</h2>
+  </div>
+  <div class="letters">
+    <% @letters.each do |letter|%>
+      <div class="letter">
+        <p><%= letter.upcase %></p>
+      </div>
+    <% end %>
+  </div>
+  <div class="form">
+    <form action="/score" method="post">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+      <%= hidden_field_tag :letters, @letters %>
+      <input type="text" name="guess" placeholder="what's your best guess?" class="form-bar">
+      <input type="submit" value="play!" class="btn-form">
+    </form>
+  </div>
 </div>
 
-<div class="form">
-  <form action="/score" method="post">
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <%= hidden_field_tag :letters, @letters %>
-    <input type="text" name="guess" placeholder="what's your best guess?">
-    <input type="submit" value="play!" class="btn btn-default">
-  </form>
-</div>
