--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,6 @@
 <div class="box">
   <div class="header">
-    <h1>do you want to play a game?</h1>
+    <h1>do you want to play a <i>game</i>?</h1>
     <br>
     <h2>find the longest word you can in the letters below:</h2>
   </div>
