--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -17,9 +17,9 @@
   </div>
   <div class="results">
     <% if @english_word && @valid_word %>
-      <p>"<%= @guess.upcase %>" is a good guess!
+      <p>"<%= @guess.upcase %>" did the trick!
       <br>
-      You scored <%= @guess.length * 100 %> points!</p>
+      You scored <i><%= @guess.length * 100 %></i> points.</p>
     <% elsif @english_word %>
       <p>"<%= @guess.upcase %>" can't be found in the letters above!</p>
     <% elsif @valid_word %>
@@ -30,5 +30,5 @@
       i'm not sure what you did there</p>
     <% end %>
   </div>
-  <%= link_to "Play again", new_path, class: "btn-form" %>
+  <%= link_to "play again", new_path, class: "btn-back" %>
 </div>
