--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -16,7 +16,7 @@
       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
       <%= hidden_field_tag :letters, @letters %>
       <input type="text" name="guess" placeholder="what's your best guess?" class="form-bar">
-      <input type="submit" value="play!" class="btn-form">
+      <input type="submit" value="submit" class="btn-form">
     </form>
   </div>
 </div>
